Misc cleanups related to JavaDoc and API quality, and directory reshuffling